# PlanarAlly

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  .oxlintrc.json  .prettierrc.json  .sonarcloud.properties  .venv  A.txt  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOP.md  Dockerfile  LICENSE  Makefile  PA.spec  README.md  azure-pipelines.yml  docker-compose.yml  heroku.yml  package-lock.json  package.json  planarally.html  planarally.py  planarserver.py  readme-generator.json  requirements.txt  shapes.py  tsconfig.json  tslint.json  vetur.config.js  webpack.config.js
server/: PA.spec  Procfile  README.md  VERSION  app.py  auth.py  config.py  generate_types.sh  index.html  logs.py  old.planar.sqlite  planar.sqlite.8  planarally.py  planarserver.py  pyproject.toml  pyrightconfig.json  remove-broken-shape-links.py  requirements-dev.txt  requirements.txt  routes.py  save.py  server_config.cfg  t.planar.sqlite  test.ts  triagtest.py  utils.py
server/api/http/: __init__.py  auth.py  notifications.py  rooms.py  users.py  version.py
server/api/socket/: __init__.py  asset.py  asset_manager.py  client.py  connection.py  constants.py  dice.py  floor.py  groups.py  initiative.py  label.py  location.py  logic.py  marker.py  note.py  player.py  room.py  shape.py
server/export/: campaign.py
server/models/: __init__.py  asset.py  base.py  campaign.py  custom_fields.py  db.py  floor.py  general.py  groups.py  initiative.py  label.py  marker.py  notifications.py  role.py  shape.py  signals.py  user.py
server/models/shape/: __init__.py  access.py
server/scripts/: remove_faulty_images.py
server/src/: __init__.py  app.py  auth.py  config.py  generate_models.py  json.py  logs.py  planarserver.py  pw.py  routes.py  save.py  thumbnail.py  typed.py  utils.py
server/src/api/: __init__.py  helpers.py
server/src/auth/: __init__.py  core.py  oidc.py
server/src/config/: __init__.py  manager.py  types.py
server/src/data_types/: client.py  location.py
server/src/db/: all.py  base.py  db.py  signals.py  typed.py  utils.py
server/src/export/: campaign.py
server/src/mail/: __init__.py
server/src/models/: __init__.py  access.py  asset.py  (+12 more)
server/state/: __init__.py  asset.py  game.py
server/static/: all_dice.babylon  babylon_test6.babylon
server/templates/: .gitignore  assets.pre.jinja2  index.html  rooms.jinja2
server/tests/: conftest.py  db.py  helpers.py  types.py
(+1882 files in other folders)
