[project]
name = "planarally-server"
version = "2025.3.0"
description = "Planarally server"
readme = "README.md"
requires-python = ">=3.13.2"

dependencies = [
    "aiohttp[speedups]==3.13.1",
    "aiohttp-security==0.5.0",
    "aiohttp-session==2.12.1",
    "bcrypt==5.0.0",
    "cryptography==46.0.3",
    "peewee==3.18.2",
    "pillow==12.0.0",
    "pydantic[email]==1.10.18",
    "python-engineio==4.12.3",
    "python-socketio==5.14.2",
    "redmail==0.6.0",
    "rtoml==0.13.0",
    "typing-extensions==4.15.0",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = ["pydantic-to-typescript==1.0.10", "ruff==0.14.2"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E722"]

[tool.ruff.lint.per-file-ignores]
"src/api/models/*" = ["F403"]
