[project]
name = "planarally-server"
version = "2025.3.0"
description = "Planarally server"
readme = "README.md"
requires-python = ">=3.13.2"

dependencies = [
    "aiohttp[speedups]==3.13.2",
    "aiohttp-security==0.5.0",
    "aiohttp-session==2.12.1",
    "bcrypt==5.0.0",
    "cryptography==46.0.3",
    "peewee==3.18.3",
    "pillow==12.1.1",
    "pydantic[email]==2.12.5",
    "python-engineio==4.12.3",
    "python-socketio==5.15.1",
    "redmail==0.6.0",
    "rtoml==0.13.0",
    "typing-extensions==4.15.0",
    "watchdog==6.0.0",
]

[dependency-groups]
dev = ["pydantic-to-typescript==2.0.0", "ruff==0.14.10"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E722"]

[tool.ruff.lint.per-file-ignores]
"src/api/models/*" = ["F403"]
